# embedpaper

./: .pre-commit-config.yaml  LICENSE  README.md  embedpaper.typ  pyproject.toml
.github/workflows/: release.yml
src/embedpaper/: __init__.py  audit.py  cli.py  embed.py
